Sep 18, 2014 - chris ---------------------------------------------------
o Major rewrite of the recovery logic; increased test coverage
o Added new parameter HAM_PARAM_JOURNAL_SWITCH_THRESHOLD to control
	the size of the journal files

Sep 11, 2014 - chris ---------------------------------------------------
o issue #39: recovery can fail with IO_ERROR if journal file is incomplete;
	fixed (thanks, Michael Moellney)

o issue #38: temporary transactions and recovery (w/o transactions)
	created huge logfiles; fixed (thanks, Michael Moellney)

Sep 10, 2014 - chris ---------------------------------------------------
o issue #34: some names violated reserved identifiers, fixed (thanks,
	Markus Elfring)

Aug 28, 2014 - chris ---------------------------------------------------
o Bugfix: fixed-length records were sometimes not inserted correctly 
	with HAM_DUPLICATE_INSERT_FIRST

Aug 26, 2014 - chris ---------------------------------------------------
o Introduced two new makros to initialize ham_key_t and ham_record_t
	structures
o The file structure has been completely reorganized. It is described
	in documentation/source/structure.txt.
o Splitting unittests/cursor.cpp in two files to avoid out-of-memory
	errors during compilation on weak VM's

Aug 21, 2014 - chris ---------------------------------------------------
o Fixed segfault when opening a file with HAM_ENABLE_RECOVERY (and
	without HAM_ENABLE_TRANSACTIONS)

Jul 15, 2014 - chris ---------------------------------------------------
o hamserver now also compiles against libuv 0.10.25 (in addition to 0.11.*)

Jul 14, 2014 - chris ---------------------------------------------------
o Added new parameter to set a file size limit - HAM_PARAM_FILE_SIZE_LIMIT

Jul 10, 2014 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.8

Jul 01, 2014 - chris ---------------------------------------------------